--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,10 @@ go:
   - "1.13.4"
   - master
 
+sudo: required
+
 script:
   - go env -w GO111MODULE=on
-  - go get -v
+  - go get -v github.com/gorilla/websocket
   - get test -v ./...
   - go build
